agregando responsividad a la pagina

--- a/hobbies.css
+++ b/hobbies.css
@@ -5,8 +5,15 @@
   margin-bottom: 16px;
 }
 
-.section__title {
+.section__title--hobbies {
   margin: 32px 0 32px;
+  font-family: Raleway;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 25.83px;
+  text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
 }
 
 .cards {
@@ -37,4 +44,30 @@
   text-decoration-skip-ink: none;
   margin-top: 8px;
   margin-left: 16px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .section--hobbies {
+    margin-bottom: 0;
+    padding: 32px;
+    gap: 32px;
+  }
+
+  .section__title--hobbies {
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .section--hobbies {
+    margin-bottom: 0;
+    padding: 32px;
+    gap: 32px;
+    width: 35%;
+  }
+  .section__title--hobbies {
+    margin: 0;
+    font-size: 32px;
+    line-height: 37.57px;
+  }
 }
