--- a/contact.css
+++ b/contact.css
@@ -1,17 +1,22 @@
 .contact {
   background-color: #eaf2fd;
+  padding: 32px;
+  width: 100%;
+}
+
+.contact__content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 32px;
+  gap: 32px;
+  width: 100%;
 }
 
 .contact__header {
   display: flex;
   flex-direction: column;
-  width: 82%;
+  width: 100%;
   gap: 8px;
-  margin: 32px;
 }
 
 .contact__title {
@@ -33,8 +38,16 @@
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
 }
+
+.contact__image {
+  display: none;
+}
+
 form {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .contact__inputs {
@@ -42,10 +55,11 @@ form {
   flex-direction: column;
   align-items: center;
   gap: 32px;
+  width: 100%;
 }
 
 input {
-  width: 82%;
+  width: 100%;
   font-family: Raleway;
   font-size: 16px;
   font-weight: 400;
@@ -56,13 +70,22 @@ input {
   height: 56px;
   border: none;
   border-radius: 4px;
+  padding: 10px;
 }
 
 textarea {
-  width: 82%;
+  width: 100%;
   height: 133px;
   padding: 10px;
   border-radius: 4px;
+  font-family: Raleway;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  border: none;
 }
 
 .contact__input--submit {
@@ -76,4 +99,33 @@ textarea {
   text-align: center;
   color: #fff;
   background-color: #2a7ae4;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .contact__input--submit {
+    width: 19%;
+    align-self: start;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .contact {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 16px;
+  }
+
+  .contact__content {
+    width: 48%;
+  }
+
+  .contact__image {
+    display: block;
+  }
+
+  .contact__title {
+    font-size: 32px;
+    line-height: 37.57px;
+  }
 }
