--- a/experience.css
+++ b/experience.css
@@ -17,6 +17,13 @@
   margin-top: 32px;
 }
 
+.experience__media-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+
 .experience__content {
   display: flex;
   flex-direction: column;
@@ -26,6 +33,7 @@
 
 .experience__image {
   width: 60%;
+  border-radius: 4%;
 }
 
 .experience__subtitle {
@@ -74,4 +82,62 @@
   color: #fff;
   background-color: #2a7ae4;
   border: solid #2a7ae4 1px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .experience__content {
+    align-items: flex-start;
+    width: 60%;
+  }
+
+  .experience__media-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .experience {
+    gap: 32px;
+  }
+  .experience__title {
+    font-size: 32px;
+    line-height: 37.57px;
+  }
+
+  .experience__media-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 16px;
+  }
+
+  .experience__content {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 8px 16px;
+  }
+
+  .experience__image {
+    width: 40%;
+  }
+
+  .experience__subtitle {
+    font-size: 22px;
+    line-height: 25.83px;
+  }
+
+  .experience__description {
+    font-size: 16px;
+    line-height: 18.78px;
+  }
+
+  .experience__link {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 18.78px;
+  }
 }
