--- a/hero.css
+++ b/hero.css
@@ -8,6 +8,7 @@
   width: 27%;
   border-radius: 50%;
   margin: 16px;
+  margin-right: auto;
 }
 
 .hero__content {
@@ -53,4 +54,66 @@
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
+  padding: 10px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .hero {
+    flex-direction: row;
+    justify-content: space-around;
+    aspect-ratio: 768 / 210;
+  }
+
+  .hero__image {
+    width: 19%;
+    order: 1;
+    margin: 0%;
+  }
+
+  .hero__content {
+    gap: 8px;
+    width: 68%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .hero {
+    flex-direction: row;
+    justify-content: space-around;
+    aspect-ratio: 768 / 210;
+    width: 79%;
+    margin-top: 32px;
+  }
+
+  .hero__image {
+    width: 32%;
+    order: 1;
+    margin: 0%;
+  }
+
+  .hero__content {
+    gap: 8px;
+    width: 68%;
+  }
+
+  .hero__title {
+    font-size: 52px;
+    line-height: 61.05px;
+  }
+
+  .hero__description {
+    font-size: 22px;
+    line-height: 25.83px;
+  }
+
+  .hero__links {
+    justify-content: left;
+    gap: 32px;
+  }
+
+  .hero__link {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 18.78px;
+  }
 }
