--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
 @import url("./main.css");
 @import url("./hero.css");
 @import url("./sobre.css");
+@import url("./sections.css");
 @import url("./skills.css");
 @import url("./hobbies.css");
 @import url("./study.css");
