--- a/header.css
+++ b/header.css
@@ -1,4 +1,7 @@
 .header {
+  position: fixed;
+  background-color: #f5f5f5;
+  z-index: 1000;
   display: flex;
   width: 100%;
   height: 56px;
@@ -31,13 +34,22 @@
   text-underline-position: from-font;
 }
 
+.header__menu-item {
+  transition: transform 0.3s ease;
+}
+
+.header__menu-item:not(:last-child) {
+  display: none;
+}
+
 .header__menu-link {
   text-decoration: none;
   color: #464646;
 }
 
-.header__menu-item:not(:last-child) {
-  display: none;
+.header__menu-item:hover {
+  transform: scale(1.1);
+  font-weight: bold;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
