--- a/hero.css
+++ b/hero.css
@@ -1,7 +1,9 @@
 .hero {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  margin-top: 90px;
+  gap: 20px;
 }
 
 .hero__image {
@@ -55,6 +57,23 @@
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
   padding: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: end;
+  gap: 5px;
+  transition: transform 0.3s ease;
+}
+
+.hero__link img {
+  width: 20px;
+}
+
+.hero__link--cv img {
+  width: 24px;
+}
+
+.hero__link:hover {
+  transform: scale(1.1);
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
@@ -62,6 +81,7 @@
     flex-direction: row;
     justify-content: space-around;
     aspect-ratio: 768 / 210;
+    margin-top: 32px;
   }
 
   .hero__image {
@@ -82,7 +102,7 @@
     justify-content: space-around;
     aspect-ratio: 768 / 210;
     width: 79%;
-    margin-top: 32px;
+    margin-top: 70px;
   }
 
   .hero__image {
