--- a/study.css
+++ b/study.css
@@ -38,6 +38,7 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  cursor: pointer;
 }
 
 .study__image--alura {
@@ -46,6 +47,7 @@
 
 .study__image--tripleten {
   width: 40%;
+  opacity: 0.8;
 }
 
 .study__subtitle {
